infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /?(.*)
          pathType: Prefix
          backend:
            service:
              name: django-srv
              port:
                number: 8000
